--- a/App/index.html
+++ b/App/index.html
@@ -12,17 +12,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>Gates Foundation Educational Spending</h1>
+    <h1>SNF Output Daten</h1>
     <div id="toolbar">
-      <a href="#" id="all" class="button active">All Grants</a>
-      <a href="#" id="year" class="button">Grants By Year</a>
+      <a href="#" id="all" class="button active">Alle Outputs</a>
+      <a href="#" id="year" class="button">Outputs nach Jahr</a>
     </div>
     <div id="vis"></div>
 
     <div class="footer">
-      <p>A demonstration of animated bubble charts in JavaScript and D3.js</p>
-      <strong>This version of the code uses D3v4!</strong>
-      <p><a href="http://vallandingham.me/bubble_charts_with_d3v4.html">Blog Post</a> | <a href="https://github.com/vlandham/bubble_chart_v4">Code</a></p>
     </div>
   </div>
 
