macht achsen während laufender simulation ersetzbar

--- a/App/index.html
+++ b/App/index.html
@@ -16,6 +16,7 @@
     <div id="toolbar">
       <a href="#" id="all" class="button active">Alle Outputs</a>
       <a href="#" id="year" class="button">Outputs nach Jahr</a>
+      <a href="#" id="yearanddiscipline" class="button">Outputs nach Jahr und Disziplin</a>
     </div>
     <div id="vis"></div>
 
