--- a/App/index.html
+++ b/App/index.html
@@ -11,18 +11,17 @@
   <link rel="stylesheet" href="css/bubble_chart.css">
 </head>
 <body>
-  <div class="container">
-    <h1>SNF Output Daten</h1>
-    <div id="toolbar">
-      <a href="#" id="all" class="button active">Alle Outputs</a>
-      <a href="#" id="year" class="button">Outputs nach Jahr</a>
-      <a href="#" id="yearanddiscipline" class="button">Outputs nach Jahr und Disziplin</a>
-    </div>
-    <div id="vis"></div>
-
-    <div class="footer">
-    </div>
-  </div>
+    <div class="container">
+        <h1>SNF Output Daten</h1>
+        <div id="toolbar">
+          <span>X-Achse <select name="selectXAxis" id="selectXAxis" /></span>
+          <span>Y-Achse <select name="selectYAxis" id="selectYAxis" /></span>
+        </div>
+        <div id="vis"></div>
+    
+        <div class="footer">
+        </div>
+      </div>
 
   <script src="src/nim.js"></script>
   <script src="src/d3.js"></script>
