makes both axes interchangeable

--- a/App/index.html
+++ b/App/index.html
@@ -14,8 +14,8 @@
     <div class="container">
         <h1>SNF Output Daten</h1>
         <div id="toolbar">
-          <span>X-Achse <select name="selectXAxis" id="selectXAxis" /></span>
-          <span>Y-Achse <select name="selectYAxis" id="selectYAxis" /></span>
+          X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
+          Y-Achse <select name="selectYAxis" id="selectYAxis"> </select>
         </div>
         <div id="vis"></div>
     
