--- a/App/index.html
+++ b/App/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-  <script src="src/nim.js"></script>
+  <script src="src/nim.axes.js"></script>
   <script src="src/d3.js"></script>
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
