introduces tooltip over all bubles in a cluster

--- a/App/index.html
+++ b/App/index.html
@@ -24,9 +24,9 @@
       </div>
 
   <script src="src/nim.axes.js"></script>
+  <script src="src/nim.clustermanager.js"></script>
   <script src="src/d3.js"></script>
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
-
 </body>
 </html>
