--- a/App/test.html
+++ b/App/test.html
@@ -1,135 +1,107 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <body>
-<script src="//d3js.org/d3.v5.min.js"></script>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <script>
-
-  
-let width = window.innerWidth,
-    height = window.innerHeight,
-    padding = 0.1, // separation between same-color nodes
+var width = 960,
+    height = 500,
+    padding = 1.5, // separation between same-color nodes
     clusterPadding = 6, // separation between different-color nodes
     maxRadius = 12;
-
-const n = 200, // total number of nodes
-    m = 9; // number of distinct clusters
-
-const color = d3.scaleOrdinal()
-    .domain(d3.range(m))
-    .range(['#92c0e0', '#2a8dd4', '#e6f2fa',
-            '#004d85', '#b1b1b1', '#e1e1e1',
-            '#663399', '#b95f00', '#F93']);
-
-
+var n = 200, // total number of nodes
+    m = 10; // number of distinct clusters
+var color = d3.scale.category10()
+    .domain(d3.range(m));
 // The largest node for each cluster.
-const clusters = new Array(m);
-
-const getNodes = () => {
-  
-  const dist = 100;	
-  
-  return d3.range(n).map(function() {
-    let i = Math.floor(Math.random() * m),
-        r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
-        d = {
-          cluster: i,
-          radius: r,
-          x: Math.cos(i / m * 2 * Math.PI) * dist + Math.random(),
-          y: Math.sin(i / m * 2 * Math.PI) * dist + Math.random()
-        };
-    if (!clusters[i] || (r > clusters[i].radius)) clusters[i] = d;
-    return d;
-  });
-}  
-
-let nodes = getNodes();
-   
-const svg = d3.select("body").append("svg")
+var clusters = new Array(m);
+var nodes = d3.range(n).map(function() {
+  var i = Math.floor(Math.random() * m),
+      r = Math.sqrt((i + 1) / m * -Math.log(Math.random())) * maxRadius,
+      d = {cluster: i, radius: r};
+  if (!clusters[i] || (r > clusters[i].radius)) clusters[i] = d;
+  return d;
+});
+// Use the pack layout to initialize node positions.
+d3.layout.pack()
+    .sort(null)
+    .size([width, height])
+    .children(function(d) { return d.values; })
+    .value(function(d) { return d.radius * d.radius; })
+    .nodes({values: d3.nest()
+      .key(function(d) { return d.cluster; })
+      .entries(nodes)});
+var force = d3.layout.force()
+    .nodes(nodes)
+    .size([width, height])
+    .gravity(.02)
+    .charge(0)
+    .on("tick", tick)
+    .start();
+var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
-
+var node = svg.selectAll("circle")
+    .data(nodes)
+  .enter().append("circle")
+    .style("fill", function(d) { return color(d.cluster); })
+    .call(force.drag);
+node.transition()
+    .duration(750)
+    .delay(function(d, i) { return i * 5; })
+    .attrTween("r", function(d) {
+      var i = d3.interpolate(0, d.radius);
+      return function(t) { return d.radius = i(t); };
+    });
+function tick(e) {
+  node
+      .each(cluster(10 * e.alpha * e.alpha))
+      .each(collide(.5))
+      .attr("cx", function(d) { return d.x; })
+      .attr("cy", function(d) { return d.y; });
+}
 // Move d to be adjacent to the cluster node.
-// from: https://bl.ocks.org/mbostock/7881887
-const cluster = () => {
-
-  var nodes,
-    strength = 0.1;
-
-  function force (alpha) {
-
-    // scale + curve alpha value
-    alpha *= strength * alpha;
-
-    nodes.forEach(function(d) {
-			var cluster = clusters[d.cluster];
-    	if (cluster === d) return;
-      
-      let x = d.x - cluster.x,
+function cluster(alpha) {
+  return function(d) {
+    var cluster = clusters[d.cluster];
+    if (cluster === d) return;
+    var x = d.x - cluster.x,
         y = d.y - cluster.y,
         l = Math.sqrt(x * x + y * y),
         r = d.radius + cluster.radius;
-
-      if (l != r) {
-        l = (l - r) / l * alpha;
-        d.x -= x *= l;
-        d.y -= y *= l;
-        cluster.x += x;
-        cluster.y += y;
-      }
-    });
-
-  }
-
-  force.initialize = function (_) {
-    nodes = _;
-  }
-
-  force.strength = _ => {
-    strength = _ == null ? strength : _;
-    return force;
+    if (l != r) {
+      l = (l - r) / l * alpha;
+      d.x -= x *= l;
+      d.y -= y *= l;
+      cluster.x += x;
+      cluster.y += y;
+    }
   };
-
-  return force;
-
 }
-
-const removeAll = () => {
-  const node = svg.selectAll("circle").remove();
+// Resolves collisions between d and all other circles.
+function collide(alpha) {
+  var quadtree = d3.geom.quadtree(nodes);
+  return function(d) {
+    var r = d.radius + maxRadius + Math.max(padding, clusterPadding),
+        nx1 = d.x - r,
+        nx2 = d.x + r,
+        ny1 = d.y - r,
+        ny2 = d.y + r;
+    quadtree.visit(function(quad, x1, y1, x2, y2) {
+      if (quad.point && (quad.point !== d)) {
+        var x = d.x - quad.point.x,
+            y = d.y - quad.point.y,
+            l = Math.sqrt(x * x + y * y),
+            r = d.radius + quad.point.radius + (d.cluster === quad.point.cluster ? padding : clusterPadding);
+        if (l < r) {
+          l = (l - r) / l * alpha;
+          d.x -= x *= l;
+          d.y -= y *= l;
+          quad.point.x += x;
+          quad.point.y += y;
+        }
+      }
+      return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+    });
+  };
 }
-  
-function drawNodes() {
-    
-  const node = svg.selectAll("circle")
-    .data(nodes)
-  .enter().append("circle")
-    .style("fill", function(d) { return color(d.cluster/10); });
-  
-  const layoutTick = e => {
-  	node
-      .attr("cx", function(d) { return d.x; })
-      .attr("cy", function(d) { return d.y; })
-      .attr("r", function(d) { return d.radius; });
-	}
-  
-  const force = d3.forceSimulation()
-  // keep entire simulation balanced around screen center
-  .force('center', d3.forceCenter(300, 300))
-
-  // cluster by section
-  .force('cluster', cluster()
-    .strength(0.3))
-
-  // apply collision with padding
-  .force('collide', d3.forceCollide(d => d.radius + padding)
-    .strength(0.7))
-
-  .on('tick', layoutTick)
-	.nodes(nodes);
-}
-
-  
-drawNodes();
-
-
-  
 </script>
