--- a/App/index.html
+++ b/App/index.html
@@ -18,7 +18,6 @@
           Y-Achse <select name="selectYAxis" id="selectYAxis"> </select>
         </div>
         <div id="vis"></div>
-    
         <div class="footer">
         </div>
       </div>
@@ -26,6 +25,7 @@
   <script src="src/nim.axes.js"></script>
   <script src="src/nim.clustermanager.js"></script>
   <script src="src/d3.js"></script>
+  <script src="src/d3plus.full.js"></script>
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
 </body>
