Website Teil 3 + Buttons html

--- a/App/index.html
+++ b/App/index.html
@@ -12,7 +12,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>SNF Output Daten</h1>
+        <h1>Visualisierung SNF Output Daten</h1>
+		
+		
+		<div class="button-group">
+	<button type="button" class="button">Forschungsdisziplin</button>
+	<button type="button" class="button">Institution</button>
+	<button type="button" class="button">Bewilligte Mittel (CHF)</button>
+	<button type="button" class="button">Förderungskategorie</button>
+	<button type="button" class="button">Output-Typ</button>
+</div>
+		<br>
+		
         <div id="toolbar">
           X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
           Y-Achse <select name="selectYAxis" id="selectYAxis"> </select>
