--- a/App/index.html
+++ b/App/index.html
@@ -14,16 +14,6 @@
     <div class="container">
         <h1>Visualisierung SNF Output Daten</h1>
 		
-		
-		<div class="button-group">
-	<button type="button" class="button">Forschungsdisziplin</button>
-	<button type="button" class="button">Institution</button>
-	<button type="button" class="button">Bewilligte Mittel (CHF)</button>
-	<button type="button" class="button">Förderungskategorie</button>
-	<button type="button" class="button">Output-Typ</button>
-</div>
-		<br>
-		
         <div id="toolbar">
           X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
           Y-Achse <select name="selectYAxis" id="selectYAxis"> </select>
@@ -39,5 +29,21 @@
   <script src="src/d3plus.full.js"></script>
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
+	
+
+<h2>Select Output-Type</h2>
+<div class="button-group">
+	<button type="button" class="button">Mediarelation 1</button>
+	<button type="button" class="button">Software</button>
+	<button type="button" class="button">Mediarelation 2</button>
+	<button type="button" class="button">New Media</button>
+	<button type="button" class="button">Other acitivies</button>
+	<button type="button" class="button">Print</button>
+	<button type="button" class="button">Start-up</button>
+	<button type="button" class="button">Talks/Events/Ausstellungen</button>
+	<button type="button" class="button">Video/Film</button>
+</div>
+
+
 </body>
 </html>
