Checkbox on/off

--- a/App/index.html
+++ b/App/index.html
@@ -22,7 +22,24 @@
         <div class="footer">
         </div>
       </div>
+	
 
+<h2>Select Output-Type</h2>
+<div id="checkbox-button">
+	<label> 
+		<input id="mediarelation1" type="checkbox"><span> Mediarelation1</span>
+		<input id="software" type="checkbox"><span> Software</span>
+		<input id="mediarelation2"type="checkbox"><span> Mediarelation 2</span>
+		<input id="newmedia" type="checkbox"><span> New Media</span>
+		<input id="otheractivities" type="checkbox"><span> Other Activities</span>
+		<input id="print" type="checkbox"><span> Print</span>
+		<input id="startup" type="checkbox"><span> Start-up</span>
+		<input id="talksevents" type="checkbox"><span> Talks/Events</span>
+		<input id="videofilm" type="checkbox"><span> Video/Film</span>
+		
+	</label>
+</div>
+	
   <script src="src/nim.axes.js"></script>
   <script src="src/nim.clustermanager.js"></script>
   <script src="src/d3.js"></script>
@@ -30,20 +47,5 @@
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
 	
-
-<h2>Select Output-Type</h2>
-<div class="button-group">
-	<button type="button" class="button">Mediarelation 1</button>
-	<button type="button" class="button">Software</button>
-	<button type="button" class="button">Mediarelation 2</button>
-	<button type="button" class="button">New Media</button>
-	<button type="button" class="button">Other acitivies</button>
-	<button type="button" class="button">Print</button>
-	<button type="button" class="button">Start-up</button>
-	<button type="button" class="button">Talks/Events/Ausstellungen</button>
-	<button type="button" class="button">Video/Film</button>
-</div>
-
-
 </body>
 </html>
