changes axes select behavior to disable y-axis when x-axis is 'none'

--- a/App/index.html
+++ b/App/index.html
@@ -68,7 +68,7 @@
             <h5>Outputs von SNF-finanzierter Forschung aus den Jahren 2011-2018 </h5>
             <div id="bubblecharttoolbar">
                 X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
-                Y-Achse <select name="selectYAxis" id="selectYAxis"> </select>
+                Y-Achse <select name="selectYAxis" id="selectYAxis" disabled> </select>
               </div>
           </div>
         </div>
