adds example button to only display bubbles of type 'Software'

--- a/App/index.html
+++ b/App/index.html
@@ -69,6 +69,7 @@
             <div id="bubblecharttoolbar">
                 X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
                 Y-Achse <select name="selectYAxis" id="selectYAxis" disabled> </select>
+                <button id="softwareonly" >Software only</button>
               </div>
           </div>
         </div>
