--- a/App/index.html
+++ b/App/index.html
@@ -70,6 +70,7 @@
                 X-Achse <select name="selectXAxis" id="selectXAxis"> </select>
                 Y-Achse <select name="selectYAxis" id="selectYAxis" disabled> </select>
                 <button id="softwareonly" >Software only</button>
+                <button id="showall">All</button>
               </div>
           </div>
         </div>
