adds checkbox labels

--- a/App/index.html
+++ b/App/index.html
@@ -76,23 +76,15 @@
 
 
 							<form>
-								<input id="medienarbeit" class="myCheckbox" type="checkbox" name="Media relations: print media, online media" checked="checked"><span> Medienarbeit</span>
-
-								<input id="software" class="myCheckbox" type="checkbox" name="Software" checked="checked"><span> Software</span>
-
-								<input id="radioundfernsehen" class="myCheckbox" type="checkbox" name="Media relations: radio, television", checked="checked"><span> Radio und Fernsehen</span>
-
-								<input id="neuemedien" class="myCheckbox" type="checkbox" name="New media (web, blogs, podcasts, news feeds etc.)" checked="checked"><span> Neue Medien</span>
-
-								<input id="druckerzeugnisse" class="myCheckbox" type="checkbox" name="Print (books, brochures, leaflets)" checked="checked"><span> Druckerzeugnisse</span>
-
-								<input id="startups" class="myCheckbox" type="checkbox" name="Start-up" checked="checked"><span> Start-up's</span>
-
-								<input id="events" class="myCheckbox" type="checkbox" name="Talks/events/exhibitions" checked="checked"><span> Events</span>
-
-								<input id="videofilm" class="myCheckbox" type="checkbox" name="Video/Film" checked="checked"><span> Video und Film</span>
-
-								<input id="andere" class="myCheckbox" type="checkbox" name="Other activities" checked="checked"><span> Andere</span>
+								<label><input id="medienarbeit" class="myCheckbox" type="checkbox" name="Media relations: print media, online media" checked="checked"><span> Medienarbeit</span></label>
+								<label><input id="software" class="myCheckbox" type="checkbox" name="Software" checked="checked"><span> Software</span></label>
+								<label><input id="radioundfernsehen" class="myCheckbox" type="checkbox" name="Media relations: radio, television", checked="checked"><span> Radio und Fernsehen</span></label>
+								<label><input id="neuemedien" class="myCheckbox" type="checkbox" name="New media (web, blogs, podcasts, news feeds etc.)" checked="checked"><span> Neue Medien</span></label>
+								<label><input id="druckerzeugnisse" class="myCheckbox" type="checkbox" name="Print (books, brochures, leaflets)" checked="checked"><span> Druckerzeugnisse</span></label>
+								<label><input id="startups" class="myCheckbox" type="checkbox" name="Start-up" checked="checked"><span> Start-up's</span></label>
+								<label><input id="events" class="myCheckbox" type="checkbox" name="Talks/events/exhibitions" checked="checked"><span> Events</span></label>
+								<label><input id="videofilm" class="myCheckbox" type="checkbox" name="Video/Film" checked="checked"><span> Video und Film</span></label>
+								<label><input id="andere" class="myCheckbox" type="checkbox" name="Other activities" checked="checked"><span> Andere</span></label>
 								
 
 								
