Anpassung HTML-Breite an SVG

--- a/App/index.html
+++ b/App/index.html
@@ -221,7 +221,7 @@
 		<!-- Footer -->
 		<footer class="py-5 bg-dark">
 			<div class="container">
-				<p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+				<p class="m-0 text-center text-white">Copyright &copy; 2017 Debora Balzli und Niklaus Maurer</p>
 			</div>
 			<!-- /.container -->
 		</footer>
