Buttons alle löschen/ alle anzeigen wiederhergestellt

--- a/App/index.html
+++ b/App/index.html
@@ -71,8 +71,8 @@
 							Y-Achse <select name="selectYAxis" id="selectYAxis" disabled> </select>
 
 
-							<button id="softwareonly" >Software only</button>
-							<button id="showall">All</button>
+							<button id="clearAll" >Alle löschen</button>
+							<button id="showall">Alle anzeigen</button>
 
 
 							<form>
