--- a/App/index.html
+++ b/App/index.html
@@ -64,12 +64,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 mx-auto">
-						<h2>Visualisierung</h2>
-						<p> <strong>Outputs von SNF-finanzierter Forschung aus den Jahren 2011-2018 </strong>
-												</p>	
+						<h2 >Visualisierung</h2>
+						<h4> <small> Outputs von SNF-finanzierter Forschung aus den Jahren 2011-2018 </small></h4> 			
 							<ul>
-								<li> Farbe: Output-Typen</li>
-								<li> Fläche: Anzahl Outputs 
+								<li> <h6> Farbe: Output-Typen</h6></li>
+								<li> <h6> Fläche: Anzahl Outputs </h6>
 						</li>
 						</ul>
 						
